- Allow Readers, Member and Managers to access users information for all users. [phgross]
- @listing endpoint: Add support for filtering by relative path depth. [lgraf]
- Update plone.restapi to latest release. [phgross]
- Add optional facet values and counts search to listing endpoint. [njohner]
- Add POST restapi endpint @mworkspace-invitations/{id}/{action}. [elioschmutz]
- Add GET restapi endpint @my-workspace-invitations. [elioschmutz]
- Allow range queries on deadline in listing endpoint. [njohner]
- Update and improve documentation for checked-out documents. [phgross, njohner]
- Add fields available in listing endpoint for each type to documentation. [njohner]
- Bump sablon to 0.3.1 and nokogiri to 1.9.1. [deiferni]
- Add restapi @participations endpoint to handle participations. [elioschmutz]
- Add per user configuration to deactivate inbox notifications. [njohner]
- Add linguistic index on task principal column for oracle backends. [phgross]
- Register ChoiceFieldDeserializer using overrides instead of configure ZCML. [lgraf]
- Update Creator, created and Date when copy/pasting an object. [njohner]
- Docs: Add tasks to documented content types. [lgraf]
- Add per user configuration to activate notifications for own actions. [njohner]
- Update ftw.solr to version 2.5.0 which allows near realtime searching. [buchi]
- Update Solr to version 8.1.1. [buchi]


2019.3.2 (2019-08-27)
---------------------

- Handle special characters in link to advanced search. [njohner]
- Add new registry field to switch between changed and document_date for dossier end date calculation. [njohner]


2019.3.1 (2019-08-27)
---------------------

- Bump ftw.solr to 2.6.1 to get fix path_depth handling. [phgross]
- Bump ftw.solr to 2.6.0 to get fix for metadata getting overwritten by extract handler. [lgraf]
- Bump ftw.bumblebee to 3.7.3 to get fix for indexing checksum in ftw.solr. [lgraf]
- Bump docxcompose version to 1.0.1 [njohner]


2019.3.0 (2019-06-17) does not include 2019.2.6