@@ -1046,6 +1046,7 @@ The ports used by the testserver can easily be changed through environment varia
 
 - ``ZSERVER_PORT`` - the port of the GEVER http server (default: ``55001``)
 - ``TESTSERVER_CTL_PORT`` - the port of the XMLRPC control server (default: ``55002``).
+- ``SOLR_PORT`` - the port of the Solr server which is controlled by the tesserver (default: ``55003``).
 
 
 Custom fixtures
