@@ -4,10 +4,20 @@ extends =
     versions.cfg
     sources.cfg
     https://raw.githubusercontent.com/4teamwork/ftw-buildouts/master/test-versions.cfg
+    https://raw.githubusercontent.com/4teamwork/gever-buildouts/master/solr.cfg
 
 package-name = opengever.core
 package-namespace = opengever
 test-egg = opengever.core[api, tests]
+
+solr-core-name = testing
+solr-port = 8984
+
+[solr]
+gever-cores =
+    ${buildout:solr-core-name}
+    testserver
+cores = ${solr:gever-cores}
 
 [test]
 initialization +=
