@@ -59,6 +59,9 @@ environment-vars +=
 zcml +=
   opengever.core
 
+[solr]
+cores = ${solr:gever-cores}
+
 [test]
 initialization +=
     os.environ['SABLON_BIN'] = '${buildout:sablon-executable}'
