@@ -9,6 +9,7 @@ parts =
     gems
     bin-test-jenkins
     ${:testserver-parts}
+    solr
 
 jenkins_python = $PYTHON27
 
