@@ -93,7 +93,7 @@ ftw.pdfgenerator = 1.6.4
 ftw.profilehook = 1.2.1
 ftw.raven = 1.2.0
 ftw.recipe.deployment = 1.4.3
-ftw.recipe.solr = 1.3.0
+ftw.recipe.solr = 1.3.1
 ftw.recipe.translations = 1.2.6
 ftw.showroom = 1.5.1
 ftw.slacker = 1.0.2
